Use realpath_root.

--- a/SOURCES/fpm-default-users.conf
+++ b/SOURCES/fpm-default-users.conf
@@ -22,6 +22,6 @@ location ~ \.php$ {
 	fastcgi_read_timeout 300;
 	include fastcgi_params;
 	fastcgi_index index.php;
-	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+	fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
 	fastcgi_pass unix:/run/php-fpm/$fpmuser.sock;
 }
