--- a/SOURCES/nginx.pagespeed.conf
+++ b/SOURCES/nginx.pagespeed.conf
@@ -144,7 +144,7 @@ http {
 	fastcgi_busy_buffers_size 256k;
 	fastcgi_index index.php;
 	include fastcgi_params;
-	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+	fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
 	
 	limit_req_zone $binary_remote_addr zone=wplogin:50m rate=20r/m;
 
