--- a/SOURCES/fpm-wordpress-sub-cache.conf
+++ b/SOURCES/fpm-wordpress-sub-cache.conf
@@ -61,7 +61,7 @@ location ~ \.php$ {
 	fastcgi_read_timeout 300;
 	include fastcgi_params;
 	fastcgi_index index.php;
-	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+	fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
 	fastcgi_pass php;
 	fastcgi_cache_bypass $skip_cache;
 	fastcgi_no_cache $skip_cache;
