--- a/SOURCES/fpm-wordpress-sub.conf
+++ b/SOURCES/fpm-wordpress-sub.conf
@@ -28,6 +28,6 @@ location ~ \.php$ {
 	fastcgi_read_timeout 300;
 	include fastcgi_params;
 	fastcgi_index index.php;
-	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+	fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
 	fastcgi_pass php;
 }
