--- a/SOURCES/fpm-laravel.conf
+++ b/SOURCES/fpm-laravel.conf
@@ -4,12 +4,14 @@ location / {
 }
 
 location ~* \.(?:cur|gif|gz|htc|ico|jpeg|jpg|mp4|ogg|ogv|png|svg|svgz|ttf|webm|woff|woff2)$ {
+	try_files $uri $uri/ /index.php?$args;
 	expires 2w;
 	add_header Cache-Control "public";
 	log_not_found off;
 }
 
 location ~* \.(?:css|js)$ {
+	try_files $uri $uri/ /index.php?$args;
 	expires 1w;
 	add_header Cache-Control "public";
 }
